before the pulling the  dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .env
-vendor
+vendor/
+autoload_static.php
+installed.php
+autoload_classmap.php
+autoload_namespaces.php
+ClassLoader.php
+autoload_psr4.php
+autoload_real.php
